# android-

NdkSample/: .gitignore
NdkSample/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
NdkSample/app/libs/include/libavutil/: ffversion.h
NdkSample/app/src/androidTest/java/com/example/grj/ndksample/: ExampleInstrumentedTest.java
NdkSample/app/src/main/: AndroidManifest.xml
NdkSample/app/src/main/cpp/: native-lib.cpp
NdkSample/app/src/main/java/com/example/grj/ndksample/: MainActivity.java
NdkSample/app/src/main/res/layout/: activity_main.xml
NdkSample/app/src/test/java/com/example/grj/ndksample/: ExampleUnitTest.java
